# generate_fm_pydantic

./: .gitignore  README.md  pyproject.toml
src/generate_fm_pydantic/: __init__.py
tests/: test_ddr.py
tests/data/: inventory_test.fmp12  inventory_test_fmp12.xml  inventory_test_models.py
